<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:text="@string/clean_process" />

	<Button
		android:id="@+id/button2"
		android:layout_below="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:text="@string/parse_pic" />

	<Button
		android:id="@+id/button3"
		android:layout_below="@+id/button1"
		android:layout_toRightOf="@+id/button2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/webview" />

	<Button
		android:id="@+id/button4"
		android:layout_below="@+id/button2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/play_network_video" />

	<Button
		android:id="@+id/button5"
		android:layout_below="@+id/button4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/volley" />

</RelativeLayout>
